# git-explore

./: .gitignore  Cargo.toml
src/: app.rs  cache.rs  main.rs
src/git/: blame.rs  diff.rs  mod.rs  repo.rs  tree.rs
src/ui/: blame.rs  diff_panel.rs  filetree.rs  help.rs  highlight.rs  mod.rs  search.rs  timeline.rs
