[package]
name = "git-explorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-explorer"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
git2 = { version = "0.19", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
lru = "0.12"
arboard = "3"
which = "7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
